# Project-Override

./: .gitignore  Args.cs  Ast.cs  CMakeLists.txt  Cargo.toml  Error.cs  Lexer.cs  Program.cs  ProjectOverride.cs  ProjectOverride.sln  ProjectOverride.txt  README.md  README.ru.md  Solution.md  Statement.cs  __ProjectOverride.txt  test
compiler/: CMakeLists.txt
compiler/src/: Args.cpp  Ast.cpp  Ast.hpp  Utils.cpp  Utils.hpp  lexer.cpp  main.cpp
runtime/: CMakeLists.txt
runtime/src/: Functions.cpp  Functions.hpp  Interface.cpp  Interface.hpp  Utils.hpp  test.cpp
src/: Args.hpp  Ast.cpp  Ast.hpp  Statement.hpp  Utils.hpp  lexer.cpp  lexer.hpp  main.cpp  main.rs
